tests/fail/function_call_undefined_function.tig
undefined_function(1)
