tests/fail/function_call_undefined_function.err
Semantic Error: Calling an undefined function undefined_function at line 1.
